mux-compiler/tests/snapshots/lexer_integration__file_lexer__modglobal_c.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "Constants whose names begin with builtin-function prefixes (print, range,",
        ),
        span: Span {
            row_start: 1,
            row_end: Some(
                1,
            ),
            col_start: 1,
            col_end: Some(
                77,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 1,
            row_end: None,
            col_start: 77,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "some, none, ok, err, read_line). These must survive a wildcard import; the",
        ),
        span: Span {
            row_start: 2,
            row_end: Some(
                2,
            ),
            col_start: 1,
            col_end: Some(
                78,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 2,
            row_end: None,
            col_start: 78,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "builtin-name guard applies to functions, not constants.",
        ),
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 1,
            col_end: Some(
                59,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 3,
            row_end: None,
            col_start: 59,
            col_end: None,
        },
    },
    Token {
        token_type: Const,
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 7,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: Id(
            "err_threshold",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 11,
            col_end: Some(
                24,
            ),
        },
    },
    Token {
        token_type: Eq,
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 25,
            col_end: Some(
                26,
            ),
        },
    },
    Token {
        token_type: Int(
            7,
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 27,
            col_end: Some(
                28,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 4,
            row_end: None,
            col_start: 28,
            col_end: None,
        },
    },
    Token {
        token_type: Const,
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 7,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: Id(
            "print_width",
        ),
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 11,
            col_end: Some(
                22,
            ),
        },
    },
    Token {
        token_type: Eq,
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 23,
            col_end: Some(
                24,
            ),
        },
    },
    Token {
        token_type: Int(
            80,
        ),
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 25,
            col_end: Some(
                27,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 5,
            row_end: None,
            col_start: 27,
            col_end: None,
        },
    },
    Token {
        token_type: Const,
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: Id(
            "string",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 7,
            col_end: Some(
                13,
            ),
        },
    },
    Token {
        token_type: Id(
            "some_label",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 14,
            col_end: Some(
                24,
            ),
        },
    },
    Token {
        token_type: Eq,
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 25,
            col_end: Some(
                26,
            ),
        },
    },
    Token {
        token_type: Str(
            "wildcard",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 27,
            col_end: Some(
                37,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 37,
            col_end: None,
        },
    },
    Token {
        token_type: Const,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 1,
            col_end: Some(
                6,
            ),
        },
    },
    Token {
        token_type: Id(
            "int",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 7,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: Id(
            "LIMIT",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 11,
            col_end: Some(
                16,
            ),
        },
    },
    Token {
        token_type: Eq,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 17,
            col_end: Some(
                18,
            ),
        },
    },
    Token {
        token_type: Int(
            55,
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 19,
            col_end: Some(
                21,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 21,
            col_end: None,
        },
    },
]
